--- a/cleaning.ipynb
+++ b/cleaning.ipynb
@@ -48,6 +48,7 @@
     "    - timestamp - date and time of the meter reading\n",
     "        - This dataset contains measurements over a span of an entire year\n",
     "    - meter_reading - Energy consumption, in kilowatt-hour (kWh) or equivalent\n",
+    "        - The electric meter readings for site 0 are in kBTU\n",
     "        - This is the target variable\n",
     "##### 2. weather_train.csv - contains weather measurements in 2016 from the weather station that is closest to the site\n",
     "    - site_id - identifies the site where the building is\n",
@@ -1279,7 +1280,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.colorbar.Colorbar at 0x7fa391451c18>"
+       "<matplotlib.colorbar.Colorbar at 0x7f8fed996cf8>"
       ]
      },
      "execution_count": 13,
@@ -3962,7 +3963,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x7fa38f0317b8>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x7f8feba20630>"
       ]
      },
      "execution_count": 49,
@@ -3994,7 +3995,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x7fa3909a32b0>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x7f8feb9dc8d0>"
       ]
      },
      "execution_count": 50,
@@ -4539,7 +4540,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x7fa38f237898>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x7f8febc263c8>"
       ]
      },
      "execution_count": 55,
@@ -4571,7 +4572,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x7fa38f102a90>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x7f8febc2fb00>"
       ]
      },
      "execution_count": 56,
@@ -4798,7 +4799,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.colorbar.Colorbar at 0x7fa38f1665c0>"
+       "<matplotlib.colorbar.Colorbar at 0x7f8feb9abba8>"
       ]
      },
      "execution_count": 59,
@@ -4857,7 +4858,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7fa38f1155c0>"
+       "<matplotlib.legend.Legend at 0x7f8febafa160>"
       ]
      },
      "execution_count": 60,
@@ -4898,7 +4899,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7fa345319be0>"
+       "<matplotlib.legend.Legend at 0x7f8fa10ba358>"
       ]
      },
      "execution_count": 61,
@@ -4939,7 +4940,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7fa344bbcd30>"
+       "<matplotlib.legend.Legend at 0x7f8fa0948908>"
       ]
      },
      "execution_count": 62,
@@ -4980,7 +4981,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7fa38ee9aac8>"
+       "<matplotlib.legend.Legend at 0x7f8feb8e1c50>"
       ]
      },
      "execution_count": 63,
@@ -5085,7 +5086,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7fa34597e400>"
+       "<matplotlib.legend.Legend at 0x7f8fa16e8080>"
       ]
      },
      "execution_count": 66,
@@ -5127,7 +5128,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7fa345903b70>"
+       "<matplotlib.legend.Legend at 0x7f8fa166a828>"
       ]
      },
      "execution_count": 67,
@@ -5169,7 +5170,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7fa3458797b8>"
+       "<matplotlib.legend.Legend at 0x7f8feb9c2390>"
       ]
      },
      "execution_count": 68,
@@ -5276,7 +5277,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7fa345811cc0>"
+       "<matplotlib.legend.Legend at 0x7f8fa15816d8>"
       ]
      },
      "execution_count": 71,
@@ -5318,7 +5319,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7fa3457e8390>"
+       "<matplotlib.legend.Legend at 0x7f8fa1534ef0>"
       ]
      },
      "execution_count": 72,
@@ -5888,6 +5889,352 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "The electricity meter readings from site 0 are in kBTU. This is inconsistent with the rest of the data, which is in kWh.\n",
+    "\n",
+    "##### Convert the electricity meter readings from site 0 from kBTU to kWh"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>site_id</th>\n",
+       "      <th>building_id</th>\n",
+       "      <th>meter</th>\n",
+       "      <th>type</th>\n",
+       "      <th>timestamp</th>\n",
+       "      <th>meter_reading</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>45</th>\n",
+       "      <td>0</td>\n",
+       "      <td>46</td>\n",
+       "      <td>0</td>\n",
+       "      <td>electricity</td>\n",
+       "      <td>2016-01-01 00:00:00</td>\n",
+       "      <td>53.2397</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>72</th>\n",
+       "      <td>0</td>\n",
+       "      <td>74</td>\n",
+       "      <td>0</td>\n",
+       "      <td>electricity</td>\n",
+       "      <td>2016-01-01 00:00:00</td>\n",
+       "      <td>43.0013</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>91</th>\n",
+       "      <td>0</td>\n",
+       "      <td>93</td>\n",
+       "      <td>0</td>\n",
+       "      <td>electricity</td>\n",
+       "      <td>2016-01-01 00:00:00</td>\n",
+       "      <td>52.4206</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2321</th>\n",
+       "      <td>0</td>\n",
+       "      <td>20</td>\n",
+       "      <td>0</td>\n",
+       "      <td>electricity</td>\n",
+       "      <td>2016-01-01 01:00:00</td>\n",
+       "      <td>91.9886</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2346</th>\n",
+       "      <td>0</td>\n",
+       "      <td>46</td>\n",
+       "      <td>0</td>\n",
+       "      <td>electricity</td>\n",
+       "      <td>2016-01-01 01:00:00</td>\n",
+       "      <td>53.6492</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4639</th>\n",
+       "      <td>0</td>\n",
+       "      <td>46</td>\n",
+       "      <td>0</td>\n",
+       "      <td>electricity</td>\n",
+       "      <td>2016-01-01 02:00:00</td>\n",
+       "      <td>54.8778</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6938</th>\n",
+       "      <td>0</td>\n",
+       "      <td>46</td>\n",
+       "      <td>0</td>\n",
+       "      <td>electricity</td>\n",
+       "      <td>2016-01-01 03:00:00</td>\n",
+       "      <td>53.6492</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6987</th>\n",
+       "      <td>0</td>\n",
+       "      <td>96</td>\n",
+       "      <td>0</td>\n",
+       "      <td>electricity</td>\n",
+       "      <td>2016-01-01 03:00:00</td>\n",
+       "      <td>33.2748</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9234</th>\n",
+       "      <td>0</td>\n",
+       "      <td>46</td>\n",
+       "      <td>0</td>\n",
+       "      <td>electricity</td>\n",
+       "      <td>2016-01-01 04:00:00</td>\n",
+       "      <td>53.6492</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11530</th>\n",
+       "      <td>0</td>\n",
+       "      <td>46</td>\n",
+       "      <td>0</td>\n",
+       "      <td>electricity</td>\n",
+       "      <td>2016-01-01 05:00:00</td>\n",
+       "      <td>54.4683</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       site_id  building_id  meter         type           timestamp  \\\n",
+       "45           0           46      0  electricity 2016-01-01 00:00:00   \n",
+       "72           0           74      0  electricity 2016-01-01 00:00:00   \n",
+       "91           0           93      0  electricity 2016-01-01 00:00:00   \n",
+       "2321         0           20      0  electricity 2016-01-01 01:00:00   \n",
+       "2346         0           46      0  electricity 2016-01-01 01:00:00   \n",
+       "4639         0           46      0  electricity 2016-01-01 02:00:00   \n",
+       "6938         0           46      0  electricity 2016-01-01 03:00:00   \n",
+       "6987         0           96      0  electricity 2016-01-01 03:00:00   \n",
+       "9234         0           46      0  electricity 2016-01-01 04:00:00   \n",
+       "11530        0           46      0  electricity 2016-01-01 05:00:00   \n",
+       "\n",
+       "       meter_reading  \n",
+       "45           53.2397  \n",
+       "72           43.0013  \n",
+       "91           52.4206  \n",
+       "2321         91.9886  \n",
+       "2346         53.6492  \n",
+       "4639         54.8778  \n",
+       "6938         53.6492  \n",
+       "6987         33.2748  \n",
+       "9234         53.6492  \n",
+       "11530        54.4683  "
+      ]
+     },
+     "execution_count": 82,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Add site_id to meter\n",
+    "meter = pd.merge(meter, building[['site_id', 'building_id']], how='left', on='building_id')\n",
+    "\n",
+    "# Reorder columns\n",
+    "meter = meter[['site_id', 'building_id', 'meter', 'type', 'timestamp', 'meter_reading']]\n",
+    "\n",
+    "# Positive meter readings in site 0\n",
+    "meter[(meter.site_id == 0) & (meter.meter_reading > 0)].head(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>site_id</th>\n",
+       "      <th>building_id</th>\n",
+       "      <th>meter</th>\n",
+       "      <th>type</th>\n",
+       "      <th>timestamp</th>\n",
+       "      <th>meter_reading</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>45</th>\n",
+       "      <td>0</td>\n",
+       "      <td>46</td>\n",
+       "      <td>0</td>\n",
+       "      <td>electricity</td>\n",
+       "      <td>2016-01-01 00:00:00</td>\n",
+       "      <td>15.604556</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>72</th>\n",
+       "      <td>0</td>\n",
+       "      <td>74</td>\n",
+       "      <td>0</td>\n",
+       "      <td>electricity</td>\n",
+       "      <td>2016-01-01 00:00:00</td>\n",
+       "      <td>12.603681</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>91</th>\n",
+       "      <td>0</td>\n",
+       "      <td>93</td>\n",
+       "      <td>0</td>\n",
+       "      <td>electricity</td>\n",
+       "      <td>2016-01-01 00:00:00</td>\n",
+       "      <td>15.364478</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2321</th>\n",
+       "      <td>0</td>\n",
+       "      <td>20</td>\n",
+       "      <td>0</td>\n",
+       "      <td>electricity</td>\n",
+       "      <td>2016-01-01 01:00:00</td>\n",
+       "      <td>26.961859</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2346</th>\n",
+       "      <td>0</td>\n",
+       "      <td>46</td>\n",
+       "      <td>0</td>\n",
+       "      <td>electricity</td>\n",
+       "      <td>2016-01-01 01:00:00</td>\n",
+       "      <td>15.724581</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4639</th>\n",
+       "      <td>0</td>\n",
+       "      <td>46</td>\n",
+       "      <td>0</td>\n",
+       "      <td>electricity</td>\n",
+       "      <td>2016-01-01 02:00:00</td>\n",
+       "      <td>16.084683</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6938</th>\n",
+       "      <td>0</td>\n",
+       "      <td>46</td>\n",
+       "      <td>0</td>\n",
+       "      <td>electricity</td>\n",
+       "      <td>2016-01-01 03:00:00</td>\n",
+       "      <td>15.724581</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6987</th>\n",
+       "      <td>0</td>\n",
+       "      <td>96</td>\n",
+       "      <td>0</td>\n",
+       "      <td>electricity</td>\n",
+       "      <td>2016-01-01 03:00:00</td>\n",
+       "      <td>9.752844</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9234</th>\n",
+       "      <td>0</td>\n",
+       "      <td>46</td>\n",
+       "      <td>0</td>\n",
+       "      <td>electricity</td>\n",
+       "      <td>2016-01-01 04:00:00</td>\n",
+       "      <td>15.724581</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11530</th>\n",
+       "      <td>0</td>\n",
+       "      <td>46</td>\n",
+       "      <td>0</td>\n",
+       "      <td>electricity</td>\n",
+       "      <td>2016-01-01 05:00:00</td>\n",
+       "      <td>15.964659</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       site_id  building_id  meter         type           timestamp  \\\n",
+       "45           0           46      0  electricity 2016-01-01 00:00:00   \n",
+       "72           0           74      0  electricity 2016-01-01 00:00:00   \n",
+       "91           0           93      0  electricity 2016-01-01 00:00:00   \n",
+       "2321         0           20      0  electricity 2016-01-01 01:00:00   \n",
+       "2346         0           46      0  electricity 2016-01-01 01:00:00   \n",
+       "4639         0           46      0  electricity 2016-01-01 02:00:00   \n",
+       "6938         0           46      0  electricity 2016-01-01 03:00:00   \n",
+       "6987         0           96      0  electricity 2016-01-01 03:00:00   \n",
+       "9234         0           46      0  electricity 2016-01-01 04:00:00   \n",
+       "11530        0           46      0  electricity 2016-01-01 05:00:00   \n",
+       "\n",
+       "       meter_reading  \n",
+       "45         15.604556  \n",
+       "72         12.603681  \n",
+       "91         15.364478  \n",
+       "2321       26.961859  \n",
+       "2346       15.724581  \n",
+       "4639       16.084683  \n",
+       "6938       15.724581  \n",
+       "6987        9.752844  \n",
+       "9234       15.724581  \n",
+       "11530      15.964659  "
+      ]
+     },
+     "execution_count": 83,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 1 kBTU * 0.2931 = 1 kWh\n",
+    "meter.loc[(meter.site_id == 0) & (meter.type == 'electricity'), 'meter_reading'] *= 0.2931\n",
+    "meter[(meter.site_id == 0) & (meter.meter_reading > 0)].head(10)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Going back to the issue referenced [here](#cleaning_ref1), the building metadata contains buildings opened in 2016 and 2017 even though this is a dataset of measurements from the beginning to end of 2016.\n",
     "\n",
     "##### Identify buildings opened in 2016 and 2017 and check these buildings in the meter data"
@@ -5895,7 +6242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [
     {
@@ -6026,7 +6373,7 @@
        "567        2016            4  "
       ]
      },
-     "execution_count": 82,
+     "execution_count": 84,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6038,7 +6385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [
     {
@@ -6129,7 +6476,7 @@
        "8    Total                78354"
       ]
      },
-     "execution_count": 83,
+     "execution_count": 85,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6161,7 +6508,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [
     {
@@ -6337,7 +6684,7 @@
        "593        2015            6                0  "
       ]
      },
-     "execution_count": 84,
+     "execution_count": 86,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6349,16 +6696,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "139"
+       "44"
       ]
      },
-     "execution_count": 85,
+     "execution_count": 87,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6388,7 +6735,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [
     {
@@ -6416,7 +6763,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [
     {
@@ -6446,7 +6793,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [
     {
@@ -6454,15 +6801,16 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 20216100 entries, 0 to 20216099\n",
-      "Data columns (total 5 columns):\n",
+      "Int64Index: 20216100 entries, 0 to 20216099\n",
+      "Data columns (total 6 columns):\n",
+      "site_id          int64\n",
       "building_id      int64\n",
       "meter            int64\n",
+      "type             object\n",
       "timestamp        datetime64[ns]\n",
       "meter_reading    float64\n",
-      "type             object\n",
-      "dtypes: datetime64[ns](1), float64(1), int64(2), object(1)\n",
-      "memory usage: 771.2+ MB\n"
+      "dtypes: datetime64[ns](1), float64(1), int64(3), object(1)\n",
+      "memory usage: 1.1+ GB\n"
      ]
     }
    ],
@@ -6479,7 +6827,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [],
    "source": [
