Edit preprocessing and eda

--- a/featurization.ipynb
+++ b/featurization.ipynb
@@ -94,16 +94,16 @@
    },
    "outputs": [],
    "source": [
+    "%matplotlib inline\n",
+    "\n",
     "import gc\n",
     "import datetime\n",
     "import numpy as np\n",
     "import pandas as pd\n",
-    "import matplotlib as mpl\n",
+    "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
     "\n",
-    "# import ray.dataframe as pd\n",
-    "\n",
-    "%matplotlib inline"
+    "# import ray.dataframe as pd"
    ]
   },
   {
@@ -117,8 +117,6 @@
    },
    "outputs": [],
    "source": [
-    "plt = mpl.pyplot\n",
-    "\n",
     "# Default plot settings\n",
     "sns.set(rc={'figure.figsize': (16, 6), \n",
     "            'font.size': 12})"
