--- a/submission3.ipynb
+++ b/submission3.ipynb
@@ -811,10 +811,8 @@
        "      <th>primary_use</th>\n",
        "      <th>square_feet</th>\n",
        "      <th>year_built</th>\n",
-       "      <th>missing_year</th>\n",
        "      <th>dayofyear</th>\n",
        "      <th>hour</th>\n",
-       "      <th>wind_direction_x</th>\n",
        "      <th>wind_direction_y</th>\n",
        "      <th>rel_humidity</th>\n",
        "      <th>is_weekend</th>\n",
@@ -833,10 +831,8 @@
        "      <td>Education</td>\n",
        "      <td>7432</td>\n",
        "      <td>2008</td>\n",
-       "      <td>0</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
-       "      <td>-0.642788</td>\n",
        "      <td>0.766044</td>\n",
        "      <td>83.409012</td>\n",
        "      <td>1</td>\n",
@@ -853,10 +849,8 @@
        "      <td>Education</td>\n",
        "      <td>2720</td>\n",
        "      <td>2004</td>\n",
-       "      <td>0</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
-       "      <td>-0.642788</td>\n",
        "      <td>0.766044</td>\n",
        "      <td>83.409012</td>\n",
        "      <td>1</td>\n",
@@ -873,10 +867,8 @@
        "      <td>Education</td>\n",
        "      <td>5376</td>\n",
        "      <td>1991</td>\n",
-       "      <td>0</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
-       "      <td>-0.642788</td>\n",
        "      <td>0.766044</td>\n",
        "      <td>83.409012</td>\n",
        "      <td>1</td>\n",
@@ -893,10 +885,8 @@
        "      <td>Education</td>\n",
        "      <td>23685</td>\n",
        "      <td>2002</td>\n",
-       "      <td>0</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
-       "      <td>-0.642788</td>\n",
        "      <td>0.766044</td>\n",
        "      <td>83.409012</td>\n",
        "      <td>1</td>\n",
@@ -913,10 +903,8 @@
        "      <td>Education</td>\n",
        "      <td>116607</td>\n",
        "      <td>1975</td>\n",
-       "      <td>0</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
-       "      <td>-0.642788</td>\n",
        "      <td>0.766044</td>\n",
        "      <td>83.409012</td>\n",
        "      <td>1</td>\n",
@@ -935,26 +923,19 @@
        "3            3      0             12.8         1022.099976         2.1   \n",
        "4            4      0             12.8         1022.099976         2.1   \n",
        "\n",
-       "  primary_use  square_feet  year_built  missing_year  dayofyear  hour  \\\n",
-       "0   Education         7432        2008             0          1     0   \n",
-       "1   Education         2720        2004             0          1     0   \n",
-       "2   Education         5376        1991             0          1     0   \n",
-       "3   Education        23685        2002             0          1     0   \n",
-       "4   Education       116607        1975             0          1     0   \n",
+       "  primary_use  square_feet  year_built  dayofyear  hour  wind_direction_y  \\\n",
+       "0   Education         7432        2008          1     0          0.766044   \n",
+       "1   Education         2720        2004          1     0          0.766044   \n",
+       "2   Education         5376        1991          1     0          0.766044   \n",
+       "3   Education        23685        2002          1     0          0.766044   \n",
+       "4   Education       116607        1975          1     0          0.766044   \n",
        "\n",
-       "   wind_direction_x  wind_direction_y  rel_humidity  is_weekend country  \\\n",
-       "0         -0.642788          0.766044     83.409012           1      US   \n",
-       "1         -0.642788          0.766044     83.409012           1      US   \n",
-       "2         -0.642788          0.766044     83.409012           1      US   \n",
-       "3         -0.642788          0.766044     83.409012           1      US   \n",
-       "4         -0.642788          0.766044     83.409012           1      US   \n",
-       "\n",
-       "   is_holiday  \n",
-       "0           1  \n",
-       "1           1  \n",
-       "2           1  \n",
-       "3           1  \n",
-       "4           1  "
+       "   rel_humidity  is_weekend country  is_holiday  \n",
+       "0     83.409012           1      US           1  \n",
+       "1     83.409012           1      US           1  \n",
+       "2     83.409012           1      US           1  \n",
+       "3     83.409012           1      US           1  \n",
+       "4     83.409012           1      US           1  "
       ]
      },
      "execution_count": 15,
@@ -963,6 +944,7 @@
     }
    ],
    "source": [
+    "train.drop(['missing_year', 'wind_direction_x'], axis=1, inplace=True)\n",
     "feats = train.drop('meter_reading', axis=1).columns\n",
     "test = test[feats]\n",
     "test.head()"
@@ -1019,10 +1001,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Meter 0: (11530268, 17) (24755760, 16)\n",
-      "Meter 1: (3518870, 17) (8724960, 16)\n",
-      "Meter 2: (2296049, 17) (5676480, 16)\n",
-      "Meter 3: (919708, 17) (2540400, 16)\n"
+      "Meter 0: (11530268, 15) (24755760, 14)\n",
+      "Meter 1: (3518870, 15) (8724960, 14)\n",
+      "Meter 2: (2296049, 15) (5676480, 14)\n",
+      "Meter 3: (919708, 15) (2540400, 14)\n"
      ]
     }
    ],
@@ -1189,7 +1171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1204,9 +1186,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train:  (8647701, 16) (8647701, 1)\n",
-      "Validation:  (2882567, 16) (2882567, 1)\n",
-      "Train:  (24755760, 16)\n"
+      "Train:  (8647701, 14) (8647701, 1)\n",
+      "Validation:  (2882567, 14) (2882567, 1)\n",
+      "Train:  (24755760, 14)\n"
      ]
     },
     {
@@ -1237,10 +1219,8 @@
        "      <th>primary_use</th>\n",
        "      <th>square_feet</th>\n",
        "      <th>year_built</th>\n",
-       "      <th>missing_year</th>\n",
        "      <th>dayofyear</th>\n",
        "      <th>hour</th>\n",
-       "      <th>wind_direction_x</th>\n",
        "      <th>wind_direction_y</th>\n",
        "      <th>rel_humidity</th>\n",
        "      <th>is_weekend</th>\n",
@@ -1258,10 +1238,8 @@
        "      <td>-0.364128</td>\n",
        "      <td>0.032242</td>\n",
        "      <td>-2.496025</td>\n",
-       "      <td>-1.103144</td>\n",
        "      <td>-0.553622</td>\n",
        "      <td>0.794318</td>\n",
-       "      <td>1.461126</td>\n",
        "      <td>-0.425474</td>\n",
        "      <td>-0.929986</td>\n",
        "      <td>-0.633757</td>\n",
@@ -1277,10 +1255,8 @@
        "      <td>1.047964</td>\n",
        "      <td>0.306161</td>\n",
        "      <td>0.586150</td>\n",
-       "      <td>-1.103144</td>\n",
        "      <td>-0.144126</td>\n",
        "      <td>-0.650406</td>\n",
-       "      <td>-0.192380</td>\n",
        "      <td>1.588679</td>\n",
        "      <td>-1.827506</td>\n",
        "      <td>-0.633757</td>\n",
@@ -1296,10 +1272,8 @@
        "      <td>1.047964</td>\n",
        "      <td>-0.372759</td>\n",
        "      <td>-1.982329</td>\n",
-       "      <td>-1.103144</td>\n",
        "      <td>1.484338</td>\n",
        "      <td>0.505373</td>\n",
-       "      <td>-0.192380</td>\n",
        "      <td>-1.401239</td>\n",
        "      <td>0.421137</td>\n",
        "      <td>-0.633757</td>\n",
@@ -1315,10 +1289,8 @@
        "      <td>-0.364128</td>\n",
        "      <td>-0.651102</td>\n",
        "      <td>-1.608732</td>\n",
-       "      <td>-1.103144</td>\n",
        "      <td>-0.515530</td>\n",
        "      <td>1.661153</td>\n",
-       "      <td>0.065518</td>\n",
        "      <td>0.093720</td>\n",
        "      <td>0.921203</td>\n",
        "      <td>-0.633757</td>\n",
@@ -1334,10 +1306,8 @@
        "      <td>0.252910</td>\n",
        "      <td>-0.527437</td>\n",
        "      <td>-0.487941</td>\n",
-       "      <td>-1.103144</td>\n",
        "      <td>-0.839318</td>\n",
        "      <td>0.505373</td>\n",
-       "      <td>-1.020670</td>\n",
        "      <td>-0.941568</td>\n",
        "      <td>-1.764215</td>\n",
        "      <td>1.577891</td>\n",
@@ -1356,29 +1326,22 @@
        "3949783      1.724795        -0.097795           -0.715502   -1.532377   \n",
        "2900643     -1.071696        -0.209059           -0.971996   -0.197577   \n",
        "\n",
-       "          primary_use  square_feet  year_built  missing_year  dayofyear  \\\n",
-       "3820751     -0.364128     0.032242   -2.496025     -1.103144  -0.553622   \n",
-       "5192151      1.047964     0.306161    0.586150     -1.103144  -0.144126   \n",
-       "10784538     1.047964    -0.372759   -1.982329     -1.103144   1.484338   \n",
-       "3949783     -0.364128    -0.651102   -1.608732     -1.103144  -0.515530   \n",
-       "2900643      0.252910    -0.527437   -0.487941     -1.103144  -0.839318   \n",
+       "          primary_use  square_feet  year_built  dayofyear      hour  \\\n",
+       "3820751     -0.364128     0.032242   -2.496025  -0.553622  0.794318   \n",
+       "5192151      1.047964     0.306161    0.586150  -0.144126 -0.650406   \n",
+       "10784538     1.047964    -0.372759   -1.982329   1.484338  0.505373   \n",
+       "3949783     -0.364128    -0.651102   -1.608732  -0.515530  1.661153   \n",
+       "2900643      0.252910    -0.527437   -0.487941  -0.839318  0.505373   \n",
        "\n",
-       "              hour  wind_direction_x  wind_direction_y  rel_humidity  \\\n",
-       "3820751   0.794318          1.461126         -0.425474     -0.929986   \n",
-       "5192151  -0.650406         -0.192380          1.588679     -1.827506   \n",
-       "10784538  0.505373         -0.192380         -1.401239      0.421137   \n",
-       "3949783   1.661153          0.065518          0.093720      0.921203   \n",
-       "2900643   0.505373         -1.020670         -0.941568     -1.764215   \n",
-       "\n",
-       "          is_weekend  country  is_holiday  \n",
-       "3820751    -0.633757  0.18362   -0.180316  \n",
-       "5192151    -0.633757  0.18362   -0.180316  \n",
-       "10784538   -0.633757  0.18362   -0.180316  \n",
-       "3949783    -0.633757  0.18362   -0.180316  \n",
-       "2900643     1.577891  0.18362   -0.180316  "
+       "          wind_direction_y  rel_humidity  is_weekend  country  is_holiday  \n",
+       "3820751          -0.425474     -0.929986   -0.633757  0.18362   -0.180316  \n",
+       "5192151           1.588679     -1.827506   -0.633757  0.18362   -0.180316  \n",
+       "10784538         -1.401239      0.421137   -0.633757  0.18362   -0.180316  \n",
+       "3949783           0.093720      0.921203   -0.633757  0.18362   -0.180316  \n",
+       "2900643          -0.941568     -1.764215    1.577891  0.18362   -0.180316  "
       ]
      },
-     "execution_count": 24,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1411,25 +1374,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.43644685533660776\n",
-      "0.28288227713627717\n"
+      "0.4363158212083116\n",
+      "0.28294328293908033\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "array([3.56470725, 3.50417155, 3.43739948, ..., 3.41324582, 3.94986875,\n",
-       "       4.58220954])"
+       "array([3.54987727, 3.48938197, 3.42275486, ..., 3.40873006, 3.94546082,\n",
+       "       4.57793329])"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1470,7 +1433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -1486,7 +1449,7 @@
        " 'feature_fraction': 0.7310599981838332}"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1499,7 +1462,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -1520,7 +1483,7 @@
        " 'seed': 42}"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1536,11 +1499,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/tri/miniconda3/envs/minimal_ds/lib/python3.8/site-packages/lightgbm/engine.py:148: UserWarning: Found `num_iterations` in params. Will use it instead of argument\n",
+      "  warnings.warn(\"Found `{}` in params. Will use it instead of argument\".format(alias))\n",
+      "/home/tri/miniconda3/envs/minimal_ds/lib/python3.8/site-packages/lightgbm/engine.py:153: UserWarning: Found `early_stopping_round` in params. Will use it instead of argument\n",
+      "  warnings.warn(\"Found `{}` in params. Will use it instead of argument\".format(alias))\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([2.93922587, 1.90868692, 0.51269491, ..., 2.16748426, 5.14519045,\n",
+       "       1.60435027])"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "lgbm0 = predict_lgb(Xe_train_scaled, ye_train, Xe_val_scaled, ye_val, Xe_test_scaled, params_lgb0, '../objects/submission2/lgb0.pkl') # .txt')\n",
+    "lgbm0 = predict_lgb(Xe_train_scaled, ye_train, Xe_val_scaled, ye_val, Xe_test_scaled, params_lgb0, '../objects/submission3/lgb0.pkl') # .txt')\n",
     "lgbm0"
    ]
   },
@@ -1567,9 +1552,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'grow_policy': 'lossguide',\n",
+       " 'learning_rate': 0.014754037383886122,\n",
+       " 'alpha': 0.005261717289274988,\n",
+       " 'lambda': 0.10981652452119427,\n",
+       " 'gamma': 0.00015007710756172543,\n",
+       " 'max_depth': 23,\n",
+       " 'max_leaves': 1598,\n",
+       " 'subsample': 0.8406224713599797,\n",
+       " 'colsample_bytree': 0.9175035245877109,\n",
+       " 'eval_metric': 'rmse',\n",
+       " 'seed': 42}"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "study_xgb0 = joblib.load('../objects/electricity/study_xgb.pkl')\n",
     "params_xgb0 = study_xgb0.best_trial.params\n",
@@ -1582,9 +1588,17 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[15:06:20] WARNING: /home/conda/feedstock_root/build_artifacts/xgboost_1572314959925/work/src/learner.cc:686: Tree method is automatically selected to be 'approx' for faster speed. To use old behavior (exact greedy algorithm on single machine), set tree_method to 'exact'.\n"
+     ]
+    }
+   ],
    "source": [
-    "xg0 = predict_xgb(Xe_train_scaled, ye_train, Xe_val_scaled, ye_val, Xe_test_scaled, params_xgb0, '../objects/submission2/xgb0.pkl') # .txt')\n",
+    "xg0 = predict_xgb(Xe_train_scaled, ye_train, Xe_val_scaled, ye_val, Xe_test_scaled, params_xgb0, '../objects/submission3/xgb0.pkl') # .txt')\n",
     "xg0"
    ]
   },
@@ -1727,7 +1741,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "lgbm1 = predict_lgb(Xc_train_scaled, yc_train, Xc_val_scaled, yc_val, Xc_test_scaled, params_lgb1, '../objects/submission2/lgb1.pkl') # .txt')\n",
+    "lgbm1 = predict_lgb(Xc_train_scaled, yc_train, Xc_val_scaled, yc_val, Xc_test_scaled, params_lgb1, '../objects/submission3/lgb1.pkl') # .txt')\n",
     "lgbm1"
    ]
   },
@@ -1771,7 +1785,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "xg1 = predict_xgb(Xc_train_scaled, yc_train, Xc_val_scaled, yc_val, Xc_test_scaled, params_xgb1, '../objects/submission2/xgb1.pkl') # .txt')\n",
+    "xg1 = predict_xgb(Xc_train_scaled, yc_train, Xc_val_scaled, yc_val, Xc_test_scaled, params_xgb1, '../objects/submission3/xgb1.pkl') # .txt')\n",
     "xg1"
    ]
   },
@@ -1914,7 +1928,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "lgbm2 = predict_lgb(Xs_train_scaled, ys_train, Xs_val_scaled, ys_val, Xs_test_scaled, params_lgb2, '../objects/submission2/lgb2.pkl') # .txt')\n",
+    "lgbm2 = predict_lgb(Xs_train_scaled, ys_train, Xs_val_scaled, ys_val, Xs_test_scaled, params_lgb2, '../objects/submission3/lgb2.pkl') # .txt')\n",
     "lgbm2"
    ]
   },
@@ -1958,7 +1972,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "xg2 = predict_xgb(Xs_train_scaled, ys_train, Xs_val_scaled, ys_val, Xs_test_scaled, params_xgb2, '../objects/submission2/xgb2.pkl') # .txt')\n",
+    "xg2 = predict_xgb(Xs_train_scaled, ys_train, Xs_val_scaled, ys_val, Xs_test_scaled, params_xgb2, '../objects/submission3/xgb2.pkl') # .txt')\n",
     "xg2"
    ]
   },
@@ -2100,7 +2114,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "lgbm3 = predict_lgb(Xh_train_scaled, yh_train, Xh_val_scaled, yh_val, Xh_test_scaled, params_lgb3, '../objects/submission2/lgb3.pkl') # .txt')\n",
+    "lgbm3 = predict_lgb(Xh_train_scaled, yh_train, Xh_val_scaled, yh_val, Xh_test_scaled, params_lgb3, '../objects/submission3/lgb3.pkl') # .txt')\n",
     "lgbm3"
    ]
   },
@@ -2144,7 +2158,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "xg3 = predict_xgb(Xh_train_scaled, yh_train, Xh_val_scaled, yh_val, Xh_test_scaled, params_xgb3, '../objects/submission2/xgb3.pkl') # .txt')\n",
+    "xg3 = predict_xgb(Xh_train_scaled, yh_train, Xh_val_scaled, yh_val, Xh_test_scaled, params_xgb3, '../objects/submission3/xgb3.pkl') # .txt')\n",
     "xg3"
    ]
   },
@@ -2411,7 +2425,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "path = '../submissions/sub2/'\n",
+    "path = '../submissions/sub3/'\n",
     "pred.to_pickle(f'{path}preds.pkl')\n",
     "pred = pd.read_pickle(f'{path}preds.pkl')\n",
     "pred"
